--- a/style.css
+++ b/style.css
@@ -33,12 +33,15 @@ a:hover {
   font-style: italic;
   font-weight: lighter;
   opacity: 0.8;
+  background-color: black;
 }
 
 #banner p {
   color: white;
   font-size: 30px;
   font-weight: lighter;
+  background-color: black;
+
 }
 
 .container {
